Update pyspypark_java_main_2nd_run.md